<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="@font/cairo"
        android:gravity="center"
        android:text="@string/ma_title"
        android:textColor="@color/salmon"
        android:textSize="75sp"
        app:layout_constraintBottom_toTopOf="@id/glHalf1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="50sp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHalf1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/tvHighScore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/ma_wins"
        android:textColor="@color/salmon"
        android:gravity="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/glHalf2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glHalf1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHalf2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEasy"
        style="@style/SalmonOutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:text="@string/ma_easy"
        android:textSize="20sp"
        app:cornerRadius="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glHalf2"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMedium"
        style="@style/SalmonOutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:text="@string/ma_medium"
        android:textSize="20sp"
        app:cornerRadius="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnHard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEasy" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHard"
        style="@style/SalmonOutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:text="@string/ma_hard"
        android:textSize="20sp"
        app:cornerRadius="16sp"
        app:layout_constraintBottom_toTopOf="@id/tvCreatedBy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMedium" />

    <TextView
        android:id="@+id/tvCreatedBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/ma_createdBy"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>