<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GameActivity">

    <Button
        android:id="@+id/btnBack"
        style="@style/SalmonOutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8sp"
        android:padding="1dp"
        android:text="@string/ga_back"
        app:layout_constraintBottom_toTopOf="@+id/glTop1"
        app:layout_constraintEnd_toStartOf="@+id/sbTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/sbTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8sp"
        app:layout_constraintBottom_toTopOf="@+id/glTop1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/glTop2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glTop1">


        <TextView
            android:id="@+id/tvMoves"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ga_moves" />

        <TextView
            android:id="@+id/tvPairs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ga_pairs" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <GridLayout
        android:id="@+id/grlTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glTop2">

        <!--<RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewFront"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/ivCardFront"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/card_front_border"
                    android:cropToPadding="true"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/card_front_image_f1_alonso" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/ivCardBack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/card_front_border"
                    android:cropToPadding="true"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/card_back" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>-->
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>